# containerless

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Cargo.toml  DOC.md  DOCKER.md  Dockerfile  LICENSE  README.md  README_WIP.md  azure-pipelines.yml  build.sh  build_release.sh  build_test.sh  cloudbuild.yaml  package.json  supported_features.md  tsconfig.json
aws-examples/: README.md
common/: Cargo.toml
containerless/rust/cli/: Cargo.toml
containerless/rust/cli/src/: containerless_shim.rs  error.rs  k8s_shim.rs  main.rs
containerless/rust/cli/src/shims/: containerless_shim.rs  k8s_shim.rs  mod.rs
containerless/rust/controller-agent/: Cargo.toml
containerless/rust/controller-agent/src/: compiler.rs  graceful_sigterm.rs  handlers.rs  logger.rs  main.rs  routes.rs
containerless/rust/controller-agent/src/controller/: common.rs  compiler.rs  error.rs  graceful_sigterm.rs  handlers.rs  mod.rs  routes.rs
containerless/rust/controller-agent/src/trace_compiler/: assertions.rs  codegen.rs  lift_callbacks.rs  mod.rs  rustify.rs  transformer.rs  types.rs
containerless/rust/dispatcher-agent/: Cargo.toml
containerless/rust/dispatcher-agent-lib/: Cargo.toml
containerless/rust/dispatcher-agent-lib/src/: autoscaler.rs  error.rs  function_manager.rs  function_table.rs  handlers.rs  lib.rs  routes.rs  state.rs  util.rs  windowed_max.rs
containerless/rust/dispatcher-agent-lib/src/dispatcher/: autoscaler.rs  function_manager.rs  function_table.rs  mod.rs  serverless_request.rs  state.rs  types.rs  util.rs
containerless/rust/dispatcher-agent-lib/src/trace_runtime/: affine_ref.rs  common.rs  decontainer.rs  execution_context.rs  type_dynamic.rs
containerless/rust/dispatcher-agent/src/decontainerized_functions/: mod.rs
containerless/rust/dispatcher-launcher-agent/: Cargo.toml
containerless/rust/dispatcher-launcher-agent/src/: main.rs
containerless/rust/function-runner-agent/: Cargo.toml  README.md
containerless/rust/function-runner-agent/src/: error.rs  main.rs
containerless/rust/function-storage-agent/: Cargo.toml  README.md
containerless/rust/function-storage-agent/src/: error.rs  handlers.rs  main.rs  record.rs  routes.rs  storage.rs
containerless/rust/integration-tests/: Cargo.toml
containerless/rust/integration-tests/src/: error.rs  main.rs  test_runner.rs  tests.rs
containerless/rust/invoker/: Cargo.toml  README.md
containerless/rust/invoker/src/: container_pool.rs  mock.rs  server.rs  sysmon.rs  time_keeper.rs  types.rs
containerless/rust/invoker/src/trace_runtime/: error.rs  type_dynamic.rs
containerless/rust/local-database-agent/: Cargo.toml
containerless/rust/local-database-agent/src/: error.rs  main.rs  routes.rs
containerless/rust/local-database-agent/src/applications/: banking.rs  login.rs  mod.rs  status.rs  upload.rs
containerless/rust/log-echo-agent/: Cargo.toml
containerless/rust/log-echo-agent/src/: main.rs
containerless/rust/shared/: Cargo.toml  README.md
containerless/rust/shared/src/: cli.rs  common.rs  config.rs  error.rs  file_contents.rs  function.rs  lib.rs  logger.rs  net.rs  response.rs  rsyslog.rs
containerless/rust/shared/src/containerless/: cli.rs  controller.rs  dispatcher.rs  error.rs  mod.rs  storage.rs
gcloud-trials/rs/: .gitignore  Cargo.toml  Dockerfile  README.md
gcloud-trials/rs/client/: .gitignore  Cargo.toml
gcloud-trials/rs/client/src/: main.rs
gcloud-trials/rs/google-datastore1/: Cargo.toml
gcloud-trials/rs/google-datastore1/src/: cmn.rs  lib.rs
gcloud-trials/rs/mutability/: Cargo.toml  README
gcloud-trials/rs/mutability/src/: cell.rs  main.rs  runtime.rs
gcloud-trials/rs/serverless/: Cargo.toml  service_key.json
gcloud-trials/rs/serverless/src/: main.rs
gcloud-trials/rs/serverless/src/datastore_mods/: funs.rs  user.rs
gcloud-trials/rs/src/: ds.rs  main.rs
gcloud-trials/rs/src/datastore_mods/: ds.rs  errors.rs  funs.rs  mod.rs  user.rs
native/: Cargo.toml
native/src/: lib.rs  types.rs
rust/compiler/: .gitignore  Cargo.toml  README.md
rust/compiler/examples/: .gitignore  echo.js
rust/compiler/src/: README.md  decontainer.rs  main.rs  rustify.rs  test_runner.rs  tests.rs  trace_js.rs
rust/compiler/src/codegen/: mod.rs
rust/compiler/src/types/: mod.rs
rust/compiler/src/verif/: assertions.rs  codegen.rs  lift_callbacks.rs  mod.rs  transformer.rs  typeinf.rs
rust/controller-agent/: Cargo.toml
rust/controller-agent/src/: common.rs  compiler.rs  graceful_sigterm.rs  main.rs
rust/controller-agent/src/trace_compiler/: assertions.rs  codegen.rs  error.rs  lift_callbacks.rs  mod.rs  rustify.rs  transformer.rs  types.rs
rust/dispatcher-agent/: Cargo.toml
rust/dispatcher-agent/src/: autoscaler.rs  decontainerizer.rs  error.rs  fixed_window.rs  function_manager.rs  function_table.rs  main.rs  serverless_function_manager.rs  types.rs  util.rs  windowed_max.rs
rust/dispatcher-agent/src/decontainerized_functions/: .gitignore  mod.rs
rust/dispatcher-agent/src/k8s/: builder.rs  client.rs  mod.rs
rust/dispatcher-agent/src/trace_runtime/: decontainer.rs  error.rs  execution_context.rs  mod.rs  type_dynamic.rs
rust/dispatcher-launcher-agent/: Cargo.toml
rust/dispatcher-launcher-agent/src/: main.rs
rust/function-runner-agent/: Cargo.toml  README.md  function-runner-demo.yaml  js-transform.sh
rust/function-runner-agent/src/: error.rs  main.rs  state.rs
rust/integration-tests/: Cargo.toml
rust/integration-tests/src/: main.rs  test_runner.rs  tests.rs
rust/invoker/: Cargo.toml  README.md
rust/invoker/src/: config.rs  container_handle.rs  container_pool.rs  decontainer_pool.rs  error.rs  isolation_pool.rs  lib.rs  main.rs  mpmc.rs  server.rs  sysmon.rs  time_keeper.rs  tracing_pool.rs  types.rs  util.rs
rust/invoker/src/trace_runtime/: decontainer.rs  error.rs  execution_context.rs  mod.rs  type_dynamic.rs
rust/k8s/: Cargo.toml
rust/k8s/src/: builder.rs  client.rs  lib.rs  types.rs
rust/multi-invoker/: .gitignore  Cargo.toml  README.md  actual_run_experiment.sh  run_utilization_experiment.sh
rust/multi-invoker/src/: forwarding.rs  main.rs
(+488 files in other folders)
