[package]
name = "decontainerization"
version = "0.1.0"
authors = ["Arjun Guha <arjun@cs.umass.edu>"]
edition = "2018"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "test"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
syn = "*"
quote = "*"
proc-macro2 = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
libloading = "*"
duct = "*"