[package]
name = "compiler"
version = "0.1.0"
authors = [
    "Arjun Guha <arjun@cs.umass.edu>",
    "Emily Herbert <emilyherbert@cs.umass.edu>"
]
edition = "2018"

[dependencies]
clap = "*"
im-rc = "*"
quote = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
duct = "*"
proc-macro2 = "*"
syn = "*"
tempfile = "*"

[dev-dependencies]
serial_test = "0.1"
serial_test_derive = "0.1"