[package]
name = "compiler"
version = "0.1.0"
authors = [
    "Arjun Guha <arjun@cs.umass.edu>",
    "Emily Herbert <emilyherbert@cs.umass.edu>"
]
edition = "2018"

[dependencies]
clap = "2.33"
im-rc = "13.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
duct = "0.12"
proc-macro2 = "1.0"
syn = "1.0"
tempfile = "3.1"

[dev-dependencies]
serial_test = "0.1"
serial_test_derive = "0.1"