[package]
name = "dispatcher-launcher-agent"
version = "0.1.0"
authors = ["Arjun Guha <arjun@cs.umass.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["macros", "time", "signal"] }
reqwest = "*"
duct = "*"
exec = "*"
log = "*"
env_logger = "*"
bytes = "*"