[package]
name = "function-runner-agent"
version = "0.1.0"
authors = ["Arjun Guha <arjun@cs.umass.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "*"
warp = "*"
tokio = { version = "*", features = ["macros", "process", "fs"] }
futures-retry = "*"
reqwest = "*"