[package]
name = "integration-tests"
version = "0.1.0"
authors = ["Arjun Guha <arjun@cs.umass.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = [ "rt-threaded", "time", "macros" ] }
serde_json = "*"
reqwest = "*"
k8s = { path = "../k8s" }