[package]
name = "invoker"
version = "0.1.0"
authors = [
    "Arjun Guha <arjun@cs.umass.edu>"
]
edition = "2018"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "*"
futures = "*"
futures-locks = "*"
duct = "*"
clap = "*"
tokio = "*"
tokio-retry = "*"
http = "*"
bytes = "*"
systemstat = "*"
bumpalo = "*"
atomic_enum = "*"
futures-cpupool = "*"
shared = { path = "../shared" }
auto_enums = { version = "*", features = [ "futures01" ] }
nix = "*"
hyper-rustls = "*"
serde_json = "*"
serde = "*"