[package]
name = "invoker"
version = "0.1.0"
authors = [
    "Arjun Guha <arjun@cs.umass.edu>"
]
edition = "2018"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12.35"
futures = "0.1.29"
futures-locks = "0.4.0"
duct = "*"
clap = "*"
tokio = "0.1.22"
tokio-retry = "0.2.0"
http = "*"
bytes = "*"
systemstat = "*"
bumpalo = "*"
atomic_enum = "*"
futures-cpupool = "*"
shared = { path = "../shared" }
auto_enums = { version = "*", features = [ "futures01" ] }
nix = "*"
hyper-rustls = "*"
serde_json = "*"
serde = "*"