[package]
name = "k8s"
version = "0.1.0"
authors = ["Arjun Guha <arjun@cs.umass.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "*"
k8s-openapi = { version = "0.7.1", default-features = false, features = ["v1_17"] }
serde_json = "*"
