[package]
name = "cli"
version = "0.1.0"
authors = ["Emily Herbert <emilyherbert@cs.umass.edu>", "Arjun Guha <a.guha@northeastern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
tokio = { version = "0.2", features = ["full"] }
shared = { path = "../shared" }