[package]
name = "controller-agent"
version = "0.1.0"
authors = ["Emily Herbert <emilyherbert@cs.umass.edu>", "Arjun Guha <a.guha@northeastern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
warp = "*"
hyper = "*"
k8s = { path = "../k8s" }
tokio = { version = "*", features = ["macros", "sync", "signal", "process"] }
kube = "*"
futures = "*"
regex = "*"
bytes = "*"
lazy_static = "*"
duct = "*"
im-rc = "*"
serde_json = "*"
serde = { version = "1.0", features = ["derive"] }
quote = "*"
proc-macro2 = "*"
syn = "*"
http = "*"
env_logger = "*"