[package]
name = "dispatcher-agent-lib"
version = "0.1.0"
authors = ["Emily Herbert <emilyherbert@cs.umass.edu>", "Arjun Guha <a.guha@northeastern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
tokio = { version = "*", features = ["rt-threaded", "macros", "sync", "signal", "time"] }
hyper = "*"
kube = { version = "0.25.0", features = ["openapi"] }
k8s-openapi = { version = "0.7.1", default-features = false, features = ["v1_17"] }
serde_json = "*"
futures = "*"
http = "*"
bytes = "*"
k8s = { path = "../k8s" }
lazy_static = "*"
regex = "*"
log = "*"
bumpalo = { version = "*", features = ["collections"] }
thiserror = "*"
warp = "*"
reqwest = { version = "0.10", features = ["json"] }
hyper-timeout = "*"
uuid = "*"