[package]
name = "dispatcher-agent"
version = "0.1.0"
authors = ["Emily Herbert <emilyherbert@cs.umass.edu>", "Arjun Guha <a.guha@northeastern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dispatcher-agent-lib = { path = "../dispatcher-agent-lib" }
tokio = { version = "*", features = ["macros", "sync", "signal", "time"] }
bumpalo = "*"