[package]
name = "dispatcher-launcher-agent"
version = "0.1.0"
authors = ["Emily Herbert <emilyherbert@cs.umass.edu>", "Arjun Guha <a.guha@northeastern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["macros", "time", "signal"] }
reqwest = "0.10.8"
duct = "*"
exec = "*"
log = "*"
env_logger = "*"
bytes = "*"
thiserror = "*"