[package]
name = "function-runner-agent"
version = "0.1.0"
authors = ["Emily Herbert <emilyherbert@cs.umass.edu>", "Arjun Guha <a.guha@northeastern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
hyper = "*"
warp = "*"
tokio = { version = "*", features = ["macros", "process", "fs", "signal"] }
futures-retry = "*"
reqwest = "0.10.8"
log = "*"