[package]
name = "function-storage-agent"
version = "0.1.0"
authors = ["Emily Herbert <emilyherbert@cs.umass.edu>", "Arjun Guha <a.guha@northeastern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
warp = "*"
tokio = { version = "*", features = ["macros", "fs"] }
hyper = "*"
bytes = "*"
serde_json = "*"
serde = { version = "1.0", features = ["derive"] }
log = "*"
http = "*"