[package]
name = "invoker"
version = "0.1.0"
authors = [
    "Arjun Guha <arjun@cs.umass.edu>"
]
edition = "2018"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12"
futures = "0.1"
futures-locks = "0.4"
duct = "0.13"
clap = "2.33"
tokio = "0.1"
tokio-retry = "0.2"
http = "0.1"
bytes = "0.4"
systemstat = "0.1"
bumpalo = "2.6"
atomic_enum = "0.1"
futures-cpupool = "0.1"
shared = { path = "../shared" }
auto_enums = { version = "0.6", features = [ "futures01" ] }
nix = "0.15"
hyper-rustls = "0.17"
serde_json = "1.0"
serde = "1.0"