[package]
name = "log-echo-agent"
version = "0.1.0"
authors = ["Arjun Guha <a.guha@northeastern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = [ "macros" ] }
log-openapi = { path = "../log-openapi" }
async-trait = "*"
swagger = "*"
hyper = "*"