[package]
name = "shared"
version = "0.1.0"
authors = ["Arjun Guha <arjun@cs.umass.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
machine-ip = "*"
tokio = { version = "*", features = [ "rt-threaded", "time", "macros", "process" ] }
reqwest = "*"
thiserror = "*"
serde = { version = "1.0", features = ["derive"] }
hyper = "*"
warp = "*"
http = "*"
bytes = "*"
futures = "*"
lazy_static = "*"