[package]
name = "shared"
version = "0.1.0"
authors = ["Emily Herbert <emilyherbert@cs.umass.edu>", "Arjun Guha <a.guha@northeastern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
machine-ip = "*"
tokio = { version = "*", features = [ "rt-threaded", "time", "macros", "process" ] }
reqwest = { version = "0.10", features = ["json"] }
thiserror = "*"
serde = { version = "1.0", features = ["derive"] }
hyper = "*"
warp = "*"
http = "*"
bytes = "*"
futures = "*"
lazy_static = "*"
serde_json = "*"
swagger = "*"
log-openapi = { path = "../log-openapi" }
duct = "*"